2003-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search): Use `w3m-goto-url' instead of `w3m'.
	* w3m-weather.el (w3m-weather): Ditto.

	* w3m.el (w3m-obey-w3m-pop-up-frames): Abolish.
	(w3m-goto-url-new-session): Find an existing emacs-w3m buffer and
	then make a copy of it; use `w3m-goto-url' instead of `w3m' if
	there is no emacs-w3m buffer.
	(w3m-browse-url): Revert last change; rename the optional arg to
	`new-session'; call `w3m-goto-url-new-session' or `w3m-goto-url'.
	(w3m-select-buffer): Use `w3m-goto-url' instead of `w3m'.
	(w3m-safe-view-this-url): Ditto.

2003-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-antenna.el (w3m-antenna): Don't pass the interactive flag to
	`w3m-goto-url'.
	* w3m-bookmark.el (w3m-bookmark-view): Ditto.
	* w3m-cookie.el (w3m-cookie): Ditto.
	* w3m-dtree.el (w3m-dtree): Ditto.
	* w3m-namazu.el (w3m-namazu): Ditto.
	* w3m-perldoc.el (w3m-perldoc): Ditto.

	* w3m.el (w3m-copy-buffer): Don't pop up a window or a frame if
	`w3m-goto-url' is called.
	(w3m-goto-url): Abolish the 8th arg `interactive-p'; pop up a
	window or a frame anyway.
	(w3m-goto-url-new-session): Abolish the `interactive-p' argument;
	don't pass it to `w3m-goto-url'.
	(w3m-gohome): Ditto.
	(w3m): Don't pop up a window or a frame there.
	(w3m-browse-url): Make it work as `browse-url-w3'.

2003-11-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-wait-process): Don't specify 3 args to
	`sit-for' for XEmacs.

2003-11-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-sittes): Change its default value.
	Allow a list that consists of a function and its options, as the
	third element of each site.
	(w3m-antenna-html-skeleton): Remove the link to the antenna editor.
	(w3m-antenna-setup): Removed.
	(w3m-antenna-shutdown): Removed.
	(w3m-antenna-alist): New function.
	(w3m-antenna-site-update): Ditto.
	(w3m-antenna-check-hns): Ditto.
	(w3m-antenna-check-anchor): Ditto.
	(w3m-antenna-check-page): Ditto.